--- a/HTML/students.html
+++ b/HTML/students.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/header.css">
+    <link rel="stylesheet" href="CSS/header.css">
 
     <style>
         #students-container{
@@ -158,8 +158,8 @@
     <!-- STUDENT CARDS -->
     <section id="students-container"></section>
 
-    <script src="../JS/api.js"></script>
-    <script src="../JS/student.js"></script>
+    <script src="JS/api.js"></script>
+    <script src="JS/student.js"></script>
 </body>
 
 </html>
