--- a/HTML/addStudent.html
+++ b/HTML/addStudent.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Student</title>
-    <link rel="stylesheet" href="../CSS/header.css">
+
+    <!-- CSS path corrected -->
+    <link rel="stylesheet" href="CSS/header.css">
 </head>
 <body>
 
@@ -12,10 +14,10 @@
        <input type="search" >
        <nav id="navlinks">
         <a href="index.html">Home</a>
-        <a href="./colleges.html">Colleges</a>
-        <a href="./students.html">Students</a>
-        <a href="./companies.html">Companies</a>
-        <a href="./job-roles.html">Job roles</a>
+        <a href="colleges.html">Colleges</a>
+        <a href="students.html">Students</a>
+        <a href="companies.html">Companies</a>
+        <a href="job-roles.html">Job Roles</a>
        </nav>
 
        <style>
@@ -95,36 +97,37 @@
         }
     </style>
 
-    </header>
+</header>
 
-    <form id="studentForm">
-        <input type="text" placeholder="Enter Student Name" id="studentName"/>
-        <select id="studentGender">
-            <option>Male</option>
-            <option>Female</option>
-        </select><br><br>
-        <input type="date" id="dob">
-        <input type="file" id="profileimg"><br><br>
-        <input type="text" placeholder="Enter College Id" id="collegeId">
-        <input type="text" placeholder="Enter department" id="department"><br><br>
+<form id="studentForm">
+    <input type="text" placeholder="Enter Student Name" id="studentName"/>
+    <select id="studentGender">
+        <option>Male</option>
+        <option>Female</option>
+    </select><br><br>
+    <input type="date" id="dob">
+    <input type="file" id="profileimg"><br><br>
+    <input type="text" placeholder="Enter College Id" id="collegeId">
+    <input type="text" placeholder="Enter department" id="department"><br><br>
 
-        <input type="text" placeholder="Enter degree" id="degree">
-        <input type="number" placeholder="Enter graduation year" id="graduation"><br><br>
-        <input type="number" placeholder="Enter graduation cgpa" id="cgpa">
-        <input type="number" placeholder="Enter no of backlogs" id="backlogs"><br><br>
+    <input type="text" placeholder="Enter degree" id="degree">
+    <input type="number" placeholder="Enter graduation year" id="graduation"><br><br>
+    <input type="number" placeholder="Enter graduation cgpa" id="cgpa">
+    <input type="number" placeholder="Enter no of backlogs" id="backlogs"><br><br>
 
-        <input type="text" placeholder="Enter programming languages" id="programming">
-        <input type="text" placeholder="Enter Database" id="database"><br><br>
+    <input type="text" placeholder="Enter programming languages" id="programming">
+    <input type="text" placeholder="Enter Database" id="database"><br><br>
 
-        <input type="text" placeholder="Enter tools" id="tools">
-        <select id="placementStatus">
-            <option>Placed</option>
-            <option>Not Placed</option>
-        </select>
+    <input type="text" placeholder="Enter tools" id="tools">
+    <select id="placementStatus">
+        <option>Placed</option>
+        <option>Not Placed</option>
+    </select>
 
-        <button type="submit">Add Student</button>
+    <button type="submit">Add Student</button>
 
-        <script src="../JS/addStudent.js"></script>
-    </form>
+    <!-- JS path corrected -->
+    <script src="JS/addStudent.js"></script>
+</form>
 </body>
 </html>
