--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/header.css">
-    <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
     <header id="header">
@@ -28,7 +28,7 @@
         
     </main>
 
-    <script src="../JS/api.js"></script>
-    <script src="../JS/index.js"></script>
+    <script src="JS/api.js"></script>
+    <script src="JS/index.js"></script>
 </body>
 </html>
